--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -11,10 +11,51 @@ body,
 	-moz-osx-font-smoothing: grayscale;
 }
 
-a {
-	text-decoration: none;
-	color: #606266;
+.el-card {
+	box-shadow: 0 1px 1px rgb(0, 0, 0, 0.15) !important;
+	margin-top: 10px;
 }
-a:hover{
+
+.avatar-uploader .el-upload {
+	border: 1px dashed #d9d9d9;
+	border-radius: 6px;
+	cursor: pointer;
+	position: relative;
+	overflow: hidden;
+}
+
+.avatar-uploader .el-upload:hover {
+	border-color: #409EFF;
+}
+
+.avatar-uploader-icon {
+	font-size: 28px;
+	color: #8c939d;
+	width: 100px;
+	height: 100px;
+	line-height: 100px;
+	text-align: center;
+}
+
+.avatar {
+	width: 100px;
+	height: 100px;
+	display: block;
+}
+
+.el-table {
+	margin-top: 10px;
+}
+
+.el-pagination {
+	margin-top: 10px;
+}
+
+a {
+	color: #606266;
+	text-decoration: none;
+}
+
+a:hover {
 	color: #409EFF;
 }
